update biz logic